# rs-2048

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  clippy-check.yml  release.yml
src/: lib.rs
