[package]
edition = "2021"
license = "MIT"
name = "rs-2048"
version = "0.2.0"
default-run = "rs-2048-gui"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", optional = true }
fastrand = "2.1.0"
fltk = { version = "1.4.33", optional = true, features = ["fltk-bundled"] }
[[bin]]
name = "rs-2048-cli"
path = "src/bin/rs-2048-cli.rs"
required-features = ["cli"]

[[bin]]
name = "rs-2048-gui"
path = "src/bin/rs-2048-gui.rs"
required-features = ["gui"]

[features]
cli = ["dep:crossterm"]
gui = ["dep:fltk"]
default = ["gui"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"   # Optimize for size.
panic = "abort"
strip = true
