[package]
edition = "2024"
license = "MIT"
name = "rs-2048"
version = "0.2.0"
default-run = "rs-2048-gui"
rust-version = "1.88"

[dependencies]
console = { version = "0.16" , optional = true }
fastrand = "2.3.0"
fltk = { version = "1.5", optional = true, features = ["fltk-bundled"] }
[[bin]]
name = "rs-2048-cli"
path = "src/bin/rs-2048-cli.rs"
required-features = ["cli"]

[[bin]]
name = "rs-2048-gui"
path = "src/bin/rs-2048-gui.rs"
required-features = ["gui"]

[features]
cli = ["dep:console"]
gui = ["dep:fltk"]
default = ["gui"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"  # More aggressive than just true
debug = 0          # Remove debug information
